@@ -3,7 +3,7 @@ Package: dplR
 Type: Package
 Title: Dendrochronology Program Library in R
 Version: 1.7.3
-Date: 2022-06-9
+Date: 2022-06-10
 Authors@R: c(person("Andy", "Bunn", role = c("aut", "cph",
         "cre", "trl"), email = "bunna@wwu.edu"), person("Mikko",
         "Korpela", role = c("aut", "cph", "trl")), person("Franco", "Biondi",
@@ -45,4 +45,4 @@ Description: Perform tree-ring analyses such as detrending, chronology
 LazyData: no
 License: GPL (>= 2)
 URL: https://github.com/AndyBunn/dplR
-VignetteBuilder: knitr
+
